--- a/.drone.yml
+++ b/.drone.yml
@@ -16,7 +16,7 @@ steps:
     PASSWORD:
       from_secret: docker_password
   commands:
-  - sudo apt install docker-ce
+  - apt install docker-ce
   - echo $PASSWORD | docker login -u $USERNAME --password-stdin
   - cd client
   - docker build -t react-app .
