--- a/.drone.yml
+++ b/.drone.yml
@@ -9,20 +9,15 @@ workspace:
 
 steps:
 - name: build
-  image: node:latest
+  image: docker
   environment:
     USERNAME:
       from_secret: docker_username
     PASSWORD:
       from_secret: docker_password
   commands:
-  - apt update -y
-  - apt install apt-transport-https ca-certificates curl software-properties-common -y
-  #- -fsSL https://download.docker.com/linux/ubuntu/gpg | apt-key add -
-  - add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu focal stable"
-  - apt-cache policy docker-ce
-  - apt install docker-ce -y
   - echo $PASSWORD | docker login -u $USERNAME --password-stdin
+  - systemctl start docker
   - cd client
   - docker build -t react-app .
   - docker tag react-app aabhusan/react-app:latest
